# CCS_RLLLM

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: emission_profiles.json  emission_proxy_curves.json  northern_lights_line_source_parameters.json  northern_lights_line_source_pressure_results.csv  northern_lights_phase1_demo.json  northern_lights_phase1_plus_yara_2026.json  phase1plus_emitters_capture_rate_profile_hourly.csv  phase1plus_emitters_capture_rate_profile_metadata.json  phase1plus_emitters_monthly_capture_profile.csv
docs/: CCS_RL_Research_Core_Idea.md  code_architecture.md  controller_comparison_720h_vessel7500t_results.html  northern_lights_data_summary.md  northern_lights_line_source_pressure_study.md  northern_lights_mechanism_ladder_L0_L3plus_cn.md  physical_layer_dashboard.html  physical_layer_phase1_plus_yara_emission_profile_1y_rule_based_dashboard.html  physical_layer_phase1_plus_yara_yara15kt_2y_rule_based_dashboard.html  physical_layer_phase2_dashboard.html  physical_layer_v1_cn.md  research_directions_ai_ccus_mirp_cn.md
examples/: build_controller_dashboards.py  build_phase1_dashboard.py  build_phase1_plus_yara_dashboard.py  build_phase2_dashboard.py  build_physical_dashboard.py  build_results_report.py  build_rule_based_dashboards.py  run_line_source_pressure_study.py  run_physical_layer_demo.py
experiments/: benchmark_phase1_yara_milp.py  compare_controllers_same_scenarios.py
figures/: gen_phase1plus_emitters_capture_profile_plots.py
hpc/: rl_smoke.py  submit_env_check.sh  submit_rl_smoke.sh  submit_train_336h.sh
(+129 files in other folders)
